apps/test/src/types/ts_types/built_in_class.ts
export type BuiltIn = {
  date: Date;
  // set: Set<string>;
  // map: Map<string, number>;
  // array: Array<string>;
  // object: Object;
  // string: String;
  // number: Number;
  // boolean: Boolean;
  // symbol: Symbol;
  // function: Function;
  // regexp: RegExp;
  // error: Error;
  // promise: Promise<string>;
  // arrayBuffer: ArrayBuffer;
  // dataView: DataView;
  // int8Array: Int8Array;
  // uint8Array: Uint8Array;
  // uint8ClampedArray: Uint8ClampedArray;
  // int16Array: Int16Array;
  // uint16Array: Uint16Array;
  // int32Array: Int32Array;
  // uint32Array: Uint32Array;
  // float32Array: Float32Array;
  // float64Array: Float64Array;
  // bigInt64Array: BigInt64Array;
  // bigUint64Array: BigUint64Array;
  // mapIterator: IterableIterator<[string, number]>;
  // setIterator: IterableIterator<string>;
  // arrayIterator: IterableIterator<string>;
  // stringIterator: IterableIterator<string>;
  // sharedArrayBuffer: SharedArrayBuffer;
  // atomics: Atomics;
  // webAssembly: typeof WebAssembly;
  // webAssemblyCompileError: WebAssembly.CompileError;
  // webAssemblyLinkError: WebAssembly.LinkError;
  // webAssemblyRuntimeError: WebAssembly.RuntimeError;
  // webAssemblyInstance: WebAssembly.Instance;
  // webAssemblyMemory: WebAssembly.Memory;
  // webAssemblyModule: WebAssembly.Module;
};
